# name: TestClass.test_method.1
  '<?xml version="1.0" encoding="UTF-8"?><svg viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg"><g><rect width="50" height="50" fill="#fff"/><g><g fill="#fff" stroke="#707070"><rect width="50" height="50" stroke="none"/><rect x="0" y="0" width="50" height="50" fill="none"/></g><text transform="translate(10 27)" fill="#707070" font-family="ConsolasForPowerline, Consolas for Powerline" font-size="8"><tspan x="0" y="0">50 x 50</tspan></text></g></g></svg>'
---
# name: TestClass.test_parametrized_method[0]
  False
---
# name: TestClass.test_parametrized_method[0].1
  False
---
# name: TestClass.test_parametrized_method[0].2
  False
---
# name: TestClass.test_parametrized_method[10]
  '🥞🐍🍯'
---
# name: TestClass.test_parametrized_method[10].1
  '🥞🐍🍯'
---
# name: TestClass.test_parametrized_method[10].2
  '🥞🐍🍯'
---
# name: TestClass.test_parametrized_method[11]
  'singleline:'
---
# name: TestClass.test_parametrized_method[11].1
  'singleline:'
---
# name: TestClass.test_parametrized_method[11].2
  'singleline:'
---
# name: TestClass.test_parametrized_method[12]
  '- singleline'
---
# name: TestClass.test_parametrized_method[12].1
  '- singleline'
---
# name: TestClass.test_parametrized_method[12].2
  '- singleline'
---
# name: TestClass.test_parametrized_method[13]
  '
  line 1
  line 2
  line 3
  '
---
# name: TestClass.test_parametrized_method[13].1
  '
  line 1
  line 2
  line 3
  '
---
# name: TestClass.test_parametrized_method[13].2
  '
  line 1
  line 2
  line 3
  '
---
# name: TestClass.test_parametrized_method[14]
  '
  line 2
  line 2
    line 3
  '
---
# name: TestClass.test_parametrized_method[14].1
  '
  line 2
  line 2
    line 3
  '
---
# name: TestClass.test_parametrized_method[14].2
  '
  line 2
  line 2
    line 3
  '
---
# name: TestClass.test_parametrized_method[15]
  '
  line 1
  line 2
  line 3
  '
---
# name: TestClass.test_parametrized_method[15].1
  '
  line 1
  line 2
  line 3
  '
---
# name: TestClass.test_parametrized_method[15].2
  '
  line 1
  line 2
  line 3
  '
---
# name: TestClass.test_parametrized_method[16]
  "string with 'quotes'"
---
# name: TestClass.test_parametrized_method[16].1
  "string with 'quotes'"
---
# name: TestClass.test_parametrized_method[16].2
  "string with 'quotes'"
---
# name: TestClass.test_parametrized_method[17]
  b'Byte string'
---
# name: TestClass.test_parametrized_method[17].1
  b'Byte string'
---
# name: TestClass.test_parametrized_method[17].2
  b'Byte string'
---
# name: TestClass.test_parametrized_method[18]
  <class 'tuple'> (
    'this',
    'is',
    <class 'tuple'> (
      'a',
      'tuple',
    ),
  )
---
# name: TestClass.test_parametrized_method[18].1
  <class 'tuple'> (
    'this',
    'is',
    <class 'tuple'> (
      'a',
      'tuple',
    ),
  )
---
# name: TestClass.test_parametrized_method[18].2
  <class 'tuple'> (
    'this',
    'is',
    <class 'tuple'> (
      'a',
      'tuple',
    ),
  )
---
# name: TestClass.test_parametrized_method[19]
  <class 'ExampleTuple'> (
    a='this',
    b='is',
    c='a',
    d=<class 'set'> {
      'named',
      'tuple',
    },
  )
---
# name: TestClass.test_parametrized_method[19].1
  <class 'ExampleTuple'> (
    a='this',
    b='is',
    c='a',
    d=<class 'set'> {
      'named',
      'tuple',
    },
  )
---
# name: TestClass.test_parametrized_method[19].2
  <class 'ExampleTuple'> (
    a='this',
    b='is',
    c='a',
    d=<class 'set'> {
      'named',
      'tuple',
    },
  )
---
# name: TestClass.test_parametrized_method[1]
  True
---
# name: TestClass.test_parametrized_method[1].1
  True
---
# name: TestClass.test_parametrized_method[1].2
  True
---
# name: TestClass.test_parametrized_method[20]
  <class 'set'> {
    'a',
    'is',
    'set',
    'this',
  }
---
# name: TestClass.test_parametrized_method[20].1
  <class 'set'> {
    'a',
    'is',
    'set',
    'this',
  }
---
# name: TestClass.test_parametrized_method[20].2
  <class 'set'> {
    'a',
    'is',
    'set',
    'this',
  }
---
# name: TestClass.test_parametrized_method[21]
  <class 'set'> {
    'contains',
    'frozen',
    <class 'frozenset'> {
      '1',
      '2',
    },
  }
---
# name: TestClass.test_parametrized_method[21].1
  <class 'set'> {
    'contains',
    'frozen',
    <class 'frozenset'> {
      '1',
      '2',
    },
  }
---
# name: TestClass.test_parametrized_method[21].2
  <class 'set'> {
    'contains',
    'frozen',
    <class 'frozenset'> {
      '1',
      '2',
    },
  }
---
# name: TestClass.test_parametrized_method[22]
  <class 'set'> {
    'contains',
    'tuple',
    <class 'tuple'> (
      1,
      2,
    ),
  }
---
# name: TestClass.test_parametrized_method[22].1
  <class 'set'> {
    'contains',
    'tuple',
    <class 'tuple'> (
      1,
      2,
    ),
  }
---
# name: TestClass.test_parametrized_method[22].2
  <class 'set'> {
    'contains',
    'tuple',
    <class 'tuple'> (
      1,
      2,
    ),
  }
---
# name: TestClass.test_parametrized_method[23]
  <class 'set'> {
    'contains',
    'namedtuple',
    <class 'ExampleTuple'> (
      a=1,
      b=2,
      c=3,
      d=4,
    ),
  }
---
# name: TestClass.test_parametrized_method[23].1
  <class 'set'> {
    'contains',
    'namedtuple',
    <class 'ExampleTuple'> (
      a=1,
      b=2,
      c=3,
      d=4,
    ),
  }
---
# name: TestClass.test_parametrized_method[23].2
  <class 'set'> {
    'contains',
    'namedtuple',
    <class 'ExampleTuple'> (
      a=1,
      b=2,
      c=3,
      d=4,
    ),
  }
---
# name: TestClass.test_parametrized_method[24]
  <class 'dict'> {
    'a': <class 'dict'> {
      'e': False,
    },
    'b': True,
    'c': 'Some text.',
    'd': <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: TestClass.test_parametrized_method[24].1
  <class 'dict'> {
    'a': <class 'dict'> {
      'e': False,
    },
    'b': True,
    'c': 'Some text.',
    'd': <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: TestClass.test_parametrized_method[24].2
  <class 'dict'> {
    'a': <class 'dict'> {
      'e': False,
    },
    'b': True,
    'c': 'Some text.',
    'd': <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: TestClass.test_parametrized_method[25]
  <class 'dict'> {
    'a': <class 'dict'> {
      'e': False,
    },
    'b': True,
    'c': 'Some ttext.',
    'd': <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: TestClass.test_parametrized_method[25].1
  <class 'dict'> {
    'a': <class 'dict'> {
      'e': False,
    },
    'b': True,
    'c': 'Some ttext.',
    'd': <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: TestClass.test_parametrized_method[25].2
  <class 'dict'> {
    'a': <class 'dict'> {
      'e': False,
    },
    'b': True,
    'c': 'Some ttext.',
    'd': <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: TestClass.test_parametrized_method[26]
  <class 'dict'> {
    'a': 'Some ttext.',
    1: True,
    <class 'ExampleTuple'> (
      a=1,
      b=2,
      c=3,
      d=4,
    ): <class 'dict'> {
      'e': False,
    },
    <class 'frozenset'> {
      '1',
      '2',
    }: <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: TestClass.test_parametrized_method[26].1
  <class 'dict'> {
    'a': 'Some ttext.',
    1: True,
    <class 'ExampleTuple'> (
      a=1,
      b=2,
      c=3,
      d=4,
    ): <class 'dict'> {
      'e': False,
    },
    <class 'frozenset'> {
      '1',
      '2',
    }: <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: TestClass.test_parametrized_method[26].2
  <class 'dict'> {
    'a': 'Some ttext.',
    1: True,
    <class 'ExampleTuple'> (
      a=1,
      b=2,
      c=3,
      d=4,
    ): <class 'dict'> {
      'e': False,
    },
    <class 'frozenset'> {
      '1',
      '2',
    }: <class 'list'> [
      '1',
      2,
    ],
  }
---
# name: TestClass.test_parametrized_method[27]
  <class 'list'> [
    1,
    2,
    'string',
    <class 'dict'> {
      'key': 'value',
    },
  ]
---
# name: TestClass.test_parametrized_method[27].1
  <class 'list'> [
    1,
    2,
    'string',
    <class 'dict'> {
      'key': 'value',
    },
  ]
---
# name: TestClass.test_parametrized_method[27].2
  <class 'list'> [
    1,
    2,
    'string',
    <class 'dict'> {
      'key': 'value',
    },
  ]
---
# name: TestClass.test_parametrized_method[28]
  <class 'list'> [
    1,
    2,
    3,
    ...,
  ]
---
# name: TestClass.test_parametrized_method[28].1
  <class 'list'> [
    1,
    2,
    3,
    ...,
  ]
---
# name: TestClass.test_parametrized_method[28].2
  <class 'list'> [
    1,
    2,
    3,
    ...,
  ]
---
# name: TestClass.test_parametrized_method[29]
  <class 'dict'> {
    'a': 1,
    'b': 2,
    'c': 3,
    'd': ...,
  }
---
# name: TestClass.test_parametrized_method[29].1
  <class 'dict'> {
    'a': 1,
    'b': 2,
    'c': 3,
    'd': ...,
  }
---
# name: TestClass.test_parametrized_method[29].2
  <class 'dict'> {
    'a': 1,
    'b': 2,
    'c': 3,
    'd': ...,
  }
---
# name: TestClass.test_parametrized_method[2]
  3.5
---
# name: TestClass.test_parametrized_method[2].1
  3.5
---
# name: TestClass.test_parametrized_method[2].2
  3.5
---
# name: TestClass.test_parametrized_method[30]
  <class 'ExampleClass'> {
    a=1,
    b='2',
    c=<class 'list'> [
      1,
      2,
      3,
      ...,
    ],
    d=<class 'dict'> {
      'a': 1,
      'b': 2,
      'c': 3,
      'd': ...,
    },
    x=<class 'ExampleClass'> {
      a=1,
      b='2',
      c=<class 'list'> [
        1,
        2,
        3,
        ...,
      ],
      d=<class 'dict'> {
        'a': 1,
        'b': 2,
        'c': 3,
        'd': ...,
      },
      x=None,
    },
  }
---
# name: TestClass.test_parametrized_method[30].1
  <class 'ExampleClass'> {
    a=1,
    b='2',
    c=<class 'list'> [
      1,
      2,
      3,
      ...,
    ],
    d=<class 'dict'> {
      'a': 1,
      'b': 2,
      'c': 3,
      'd': ...,
    },
    x=<class 'ExampleClass'> {
      a=1,
      b='2',
      c=<class 'list'> [
        1,
        2,
        3,
        ...,
      ],
      d=<class 'dict'> {
        'a': 1,
        'b': 2,
        'c': 3,
        'd': ...,
      },
      x=None,
    },
  }
---
# name: TestClass.test_parametrized_method[30].2
  <class 'ExampleClass'> {
    a=1,
    b='2',
    c=<class 'list'> [
      1,
      2,
      3,
      ...,
    ],
    d=<class 'dict'> {
      'a': 1,
      'b': 2,
      'c': 3,
      'd': ...,
    },
    x=<class 'ExampleClass'> {
      a=1,
      b='2',
      c=<class 'list'> [
        1,
        2,
        3,
        ...,
      ],
      d=<class 'dict'> {
        'a': 1,
        'b': 2,
        'c': 3,
        'd': ...,
      },
      x=None,
    },
  }
---
# name: TestClass.test_parametrized_method[3]
  7
---
# name: TestClass.test_parametrized_method[3].1
  7
---
# name: TestClass.test_parametrized_method[3].2
  7
---
# name: TestClass.test_parametrized_method[4]
  0.3333333333333333
---
# name: TestClass.test_parametrized_method[4].1
  0.3333333333333333
---
# name: TestClass.test_parametrized_method[4].2
  0.3333333333333333
---
# name: TestClass.test_parametrized_method[5]
  3.142857142857143
---
# name: TestClass.test_parametrized_method[5].1
  3.142857142857143
---
# name: TestClass.test_parametrized_method[5].2
  3.142857142857143
---
# name: TestClass.test_parametrized_method[6]
  ''
---
# name: TestClass.test_parametrized_method[6].1
  ''
---
# name: TestClass.test_parametrized_method[6].2
  ''
---
# name: TestClass.test_parametrized_method[7]
  'Raw string'
---
# name: TestClass.test_parametrized_method[7].1
  'Raw string'
---
# name: TestClass.test_parametrized_method[7].2
  'Raw string'
---
# name: TestClass.test_parametrized_method[8]
  'Escaped \\n'
---
# name: TestClass.test_parametrized_method[8].1
  'Escaped \\n'
---
# name: TestClass.test_parametrized_method[8].2
  'Escaped \\n'
---
# name: TestClass.test_parametrized_method[9]
  'Backslash \\u U'
---
# name: TestClass.test_parametrized_method[9].1
  'Backslash \\u U'
---
# name: TestClass.test_parametrized_method[9].2
  'Backslash \\u U'
---
